--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "autoprefixer": "^10.4.21",
     "expo": "^54.0.22",
     "expo-constants": "~18.0.10",
@@ -33,9 +34,9 @@
     "nativewind": "^2.0.11",
     "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-native": "^0.82.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
@@ -45,7 +46,9 @@
     "tailwindcss": "^3.2.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
